--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@graphcms/rich-text-react-renderer": "^0.4.2",
     "@graphcms/rich-text-types": "^0.3.1",
     "framer-motion": "^6",
     "graphql": "^16.3.0",
